--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body{
     left:0;
     width:100%;
     height:100%;
-    object-fit:cover;
+   object-fit:cover;
 }
 .profileText h2{
     color:#fff;
@@ -63,8 +63,10 @@ body{
     line-height:1.4em;
 }
 .profileText h2 span{
-    font-size:0.8em;
-    font-weight:300;
+    font-size:0.7em;
+    font-weight:600;
+    font-style: italic;
+    color:#03a9f4;
 }
 .contactInfo{
     padding-top:40px;
